# hermes

./: .gitignore  README.md  hermes.db  implementation.md  test.db
docs/: autonomy_definition.txt  data_architecutre_telemetry.txt  interface_control_document.txt  mission_state_machine.txt  operational_risk_register.md  operational_risk_register.txt  product_definition_doc.txt  simulation_validation_plan.txt  system_architecture.txt  use-case.txt  vision_scope.txt
simulation/drone_models/: iris_base.xacro
simulation/drone_simulation/: CMakeLists.txt  package.xml
simulation/drone_simulation/launch/: gazebo_world.launch.py
simulation/drone_simulation/urdf/: base_structure.xacro  drone.urdf  electronics.xacro  payload_system.xacro  propulsion_system.xacro  safety_features.xacro  sensors.xacro
simulation/gazebo_worlds/: hermes_world.world
src/ai_vision/drone_vision_node/: CMakeLists.txt  package.xml
src/ai_vision/drone_vision_node/launch/: vision_node.launch.py
src/ai_vision/drone_vision_node/src/: drone_vision_node.py
src/backend_services/: config.py  main.py  models.py  schemas.py  utils.py
src/backend_services/routers/: auth.py  missions.py
src/drone_core/: package.xml  setup.py
src/drone_core/drone_core/: controller_node.py  path_planner_node.py  telemetry_node.py
tests/: test_backend.py
