<?xml version="1.0"?>
<package format="3">
  <name>drone_vision_node</name>
  <version>0.1.0</version>
  <description>Hermes AI Drone Vision Node using YOLOv8 and OpenCV</description>

  <maintainer email="philip.edward1510@gmail.com">Pelluml</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>